# anamoly_detection

./: .gitignore  README.md  pyproject.toml
scripts/: test_anomaly_detection.py
src/anamoly_detection/: __init__.py  detector.py
